--- a/_posts/2024-01-03-Curso-GIT.md
+++ b/_posts/2024-01-03-Curso-GIT.md
@@ -8,9 +8,9 @@ header:
   teaser: /assets/images/Git/Git.jpg
   teaser_home_page: true
 categories:
-  - Sistema Operativo
+  - Curso
 tags:
-  - Código Abierto
+  - Git
 ---
 
 <p align="center">
