--- a/_posts/2024-01-01-Linux.md
+++ b/_posts/2024-01-01-Linux.md
@@ -151,3 +151,7 @@ También se ofrece en diferentes formatos para adaptarse a otros tipos de soluci
 
 - `MicroOS`: Diseñado para operar con el mínimo de recursos posibles.
 - `Kubic`: Orientado a microservicios (contenedores).
+
+# Vulnerabilidades conocidas
+- [Dirty COW (CVE-2016-5195)](https://dirtycow.ninja/)
+- [Binarios (Unix)](https://gtfobins.github.io/)
