--- a/_posts/2024-02-02-Windows.md
+++ b/_posts/2024-02-02-Windows.md
@@ -1,14 +1,14 @@
 ---
 layout: single
-title: Web Descentralizada
+title: Windows
 excerpt: ""
-date: 2024-10-20
+date: 2024-10-19
 classes: wide
 header:
   teaser: /assets/images/
   teaser_home_page: true
 categories:
-  - Web
+  - Windows
 tags:
   - 
 ---
@@ -16,4 +16,5 @@ tags:
 ![Portada](/assets/images/)
 
 ## Referencias
-- [Escuela Proto](https://proto.school/tutorials)
+- [WADComs](https://wadcoms.github.io/)
+- [./Persistence info](https://persistence-info.github.io/)
